--- a/userprofiles/userprofiles/profile_page.html
+++ b/userprofiles/userprofiles/profile_page.html
@@ -77,7 +77,8 @@
     </div>
     <!-- Developers -->
 
-    {% if is_signed %}
+    {% if user.profile.is_signed %}
+    {% for chair in user.profile.chairs %}
     <div class="row columns">
         <div class="column is-one-third">
             <div class="card large">
@@ -94,7 +95,7 @@
                             </figure>
                         </div>
                         <div class="media-content">
-                            <p class="title is-4 no-padding has-text-dark">{{user.profile.chairs[0]}}</p>
+                            <p class="title is-4 no-padding has-text-dark">{{UnidadeCurricular.get_name(chair)}}</p>
                             <p><span class="title is-6 link has-text-dark"><a href="http://twitter.com/#">@josecandido</a></span></p>
                             <p class=" is-6 has-text-dark">Phd. in Geology</p>
                         </div>
@@ -111,7 +112,7 @@
                 </footer>
             </div>
         </div>
-
+<!--
         <div class="column is-one-third">
             <div class="card large">
                 <div class="card-image">
@@ -176,12 +177,12 @@
                 </footer>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- End Developers -->
 
     <!-- Staff -->
-    <div class="row columns is-multiline">
+    <!-- <div class="row columns is-multiline">
         <div class="column is-one-third">
             <div class="card large round">
                 <div class="card-image ">
@@ -275,8 +276,10 @@
                     <a href="" class="card-footer-item">News</a>
                 </footer>
             </div>
-        </div>
+        </div> -->
       </div>
+      {% endfor %}
+
       {% else %}
 
         <a class="button is-small is-primary" href="{% url 'sign_chairs' %}">Inscrever</a>
