--- a/userprofiles/userprofiles/profile_sign.html
+++ b/userprofiles/userprofiles/profile_sign.html
@@ -4,10 +4,10 @@
 <form method="post">
   {% csrf_token %}
 
-  {{ sign_form }}
+  {{ form }}
 
 
-  <button type="submit" class="button is-small is-primary">Submit</button>
+  <a href="{% url 'get_profile' %}" type="submit" class="button is-small is-primary">Submit</a>
 </form>
 
 {% endblock %}
