UX fixes: -login_redirects -wrong url dispatch

--- a/pages/pages/base.html
+++ b/pages/pages/base.html
@@ -78,7 +78,7 @@
           <div id="navbarMenu" class="navbar-menu">
             <div class="navbar-end">
               <span class="navbar-item">
-                  <a class="button is-white is-outlined" href="{% url 'get_profile' %}">
+                  <a class="button is-white is-outlined" href="{% url 'landing' %}">
                       <span class="icon">
                           <i class="fa fa-home"></i>
                       </span>
