--- a/userprofiles/userprofiles/profile_sign.html
+++ b/userprofiles/userprofiles/profile_sign.html
@@ -7,7 +7,7 @@
   {{ form }}
 
 
-  <a href="{% url 'get_profile' %}" type="submit" class="button is-small is-primary">Submit</a>
+  <button class="button is-medium" type="submit">Save changes</button>
 </form>
 
 {% endblock %}
